# FPT-AI

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  INSTALLATION.md  Naming BIM (1).docx  Research_and_Installation_Manual.md  docker-compose.yml  project.md  start.bat
AI/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
AI/configs/: got_bridge.example.json  mast3r_bridge_frames_fast.yaml  mast3r_bridge_video_fast.yaml
AI/docs/: CLIENT_SUMMARY.md  INSTALLATION.md  ai_handoff_for_claude.md  ai_output_contract.md  bridge_isolation_testing.md  bridge_progress_monitor_report.md  construction_only_slam_testing.md  dynamic_masking_experiment.md  interim_ai_brief.md  manual_frame_reconstruction_testing.md  meetingwithteacher.md  method_comparison_table.md  nerfstudio_splatfacto_testing.md  pipeline_usage.md  sam_pointcloud_lifting_testing.md  slam_drift_finding.md  vision_comparison_testing.md  vslam_gaussian_splat_testing.md
AI/scripts/: build_vision_comparison.py  check_mirror_fit.py  clean_pointcloud.py  collect_handoff.py  construction_overlay_video.py  extract_bridge_points.py  mask_dynamic_objects.py  mask_keep_construction.py  pick_control_points.py  probe_sam3_prompts.py  progress_over_time.py  remove_black_points.py  render_bridge_model.py  render_clouds_for_slides.py  render_topdown_grid.py  run_all_videos.py  run_bridge_ai_pipeline.py  run_mast3r_bridge1_fast.sh  run_mast3r_bridge1_masked.sh  run_nerfstudio_bridge1_splat.sh  sam_lift_to_pointcloud.py  segment_bridge_frame.py
AI/tests/: test_anchor_alignment.py  (+2 more)
(+113 files in other folders)
