[project]
name = "ftp-ai"
version = "0.1.0"
description = "AI pipeline prototype for GOT bridge construction progress monitoring."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "pydantic>=2.7",
    "rich>=13.7",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
ifc = [
    "ifcopenshell>=0.8",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
ftp-ai = "ftp_ai.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

